<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="210dp"
    android:minHeight="210dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="20dp"
    android:background="@drawable/roundedlayoutbutton">


    <TextView
        android:id="@+id/titleText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/do_you_want_to_restore_old_data_your_current_changes_will_be_deleted"
        android:textColor="#6E6E6E"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnYessync"
        android:layout_width="139dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="140dp"
        android:layout_weight="1"
        android:background="@drawable/roundedlayoutbutton"
        android:text="@string/yes"
        android:textAllCaps="true"
        android:textColor="#E9FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="#001AFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNosync"
        android:layout_width="139dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="194dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:background="@drawable/roundedlayoutbutton"
        android:text="@string/no"
        android:textAllCaps="true"
        android:textColor="#E9FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="#001AFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</RelativeLayout>